--- a/EquipmentRepairServiceCenter.ASP/EquipmentRepairServiceCenter.ASP.csproj
+++ b/EquipmentRepairServiceCenter.ASP/EquipmentRepairServiceCenter.ASP.csproj
@@ -6,4 +6,13 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.9" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.9" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\EquipmentRepairServiceCenter.Database\EquipmentRepairServiceCenter.Database.csproj" />
+  </ItemGroup>
+
 </Project>
