created services, repositories and controllers

--- a/EquipmentRepairServiceCenter.Interfaces/EquipmentRepairServiceCenter.Interfaces.csproj
+++ b/EquipmentRepairServiceCenter.Interfaces/EquipmentRepairServiceCenter.Interfaces.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\EquipmentRepairServiceCenter.Domain\EquipmentRepairServiceCenter.Domain.csproj" />
+    <ProjectReference Include="..\EquipmentRepairServiceCenter.DTO\EquipmentRepairServiceCenter.DTO.csproj" />
   </ItemGroup>
 
 </Project>
