--- a/EquipmentRepairServiceCenter.ASP/appsettings.Development.json
+++ b/EquipmentRepairServiceCenter.ASP/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+
+  "ConnectionStrings": {
+    "sqlConnection": "Server=DESKTOP-BU14T8R\\SQLEXPRESS;Database=EquipmentRepairServiceCenterDb;Trusted_Connection=True;"
   }
 }
