implemented authorization and registration

--- a/EquipmentRepairServiceCenter.ASP/appsettings.Development.json
+++ b/EquipmentRepairServiceCenter.ASP/appsettings.Development.json
@@ -8,5 +8,7 @@
 
   "ConnectionStrings": {
     "sqlConnection": "Server=DESKTOP-BU14T8R\\SQLEXPRESS;Database=EquipmentRepairServiceCenterDb;Trusted_Connection=True;"
-  }
+  },
+
+  "TokenKey": "X-Access-Token"
 }
