--- a/EquipmentRepairServiceCenter.ASP/EquipmentRepairServiceCenter.ASP.csproj
+++ b/EquipmentRepairServiceCenter.ASP/EquipmentRepairServiceCenter.ASP.csproj
@@ -20,4 +20,15 @@
     <ProjectReference Include="..\EquipmentRepairServiceCenter.Database\EquipmentRepairServiceCenter.Database.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Views\Clients\" />
+    <Folder Include="Views\Employees\" />
+    <Folder Include="Views\Faults\" />
+    <Folder Include="Views\Users\" />
+    <Folder Include="Views\SpareParts\" />
+    <Folder Include="Views\ServicedStores\" />
+    <Folder Include="Views\RepairingModels\" />
+    <Folder Include="Views\Orders\" />
+  </ItemGroup>
+
 </Project>
