--- a/EquipmentRepairServiceCenter.ASP/appsettings.Development.json
+++ b/EquipmentRepairServiceCenter.ASP/appsettings.Development.json
@@ -7,7 +7,7 @@
   },
 
   "ConnectionStrings": {
-    "sqlConnection": "Server=DESKTOP-BU14T8R\\SQLEXPRESS;Database=EquipmentRepairServiceCenterDb;Trusted_Connection=True;"
+    "sqlConnection": "Server=DESKTOP-0SM65GV\\SQLEXPRESS;Database=EquipmentRepairServiceCenterDb;Trusted_Connection=True;"
   },
 
   "TokenKey": "X-Access-Token"
