--- a/EquipmentRepairServiceCenter.API/appsettings.Development.json
+++ b/EquipmentRepairServiceCenter.API/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+
+  "ConnectionStrings": {
+    "sqlConnection": "Server=DESKTOP-0SM65GV\\SQLEXPRESS;Database=EquipmentRepairServiceCenterDb;Trusted_Connection=True;"
   }
 }
